[gd_scene load_steps=3 format=3 uid="uid://w5kce6sthn2c"]

[ext_resource type="Script" uid="uid://ddg6hef7wh30r" path="res://scripts/GameController.gd" id="1"]
[ext_resource type="Script" uid="uid://cf43vgjrxl33t" path="res://scripts/GridBoard.gd" id="2"]

[node name="Main" type="Node2D"]
script = ExtResource("1")

[node name="Grid" type="Node2D" parent="."]
position = Vector2(360, 40)
script = ExtResource("2")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(520, 320)

[node name="UI" type="CanvasLayer" parent="."]

[node name="PanelContainer" type="PanelContainer" parent="UI"]
custom_minimum_size = Vector2(360, 0)
offset_left = 16.0
offset_top = 16.0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/PanelContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="UI/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Zoo Architect - Spatial Survival"

[node name="ContractLabel" type="RichTextLabel" parent="UI/PanelContainer/VBoxContainer"]
layout_mode = 2
bbcode_enabled = true
text = "Loading contract..."
fit_content = true
autowrap_mode = 1

[node name="StatsLabel" type="Label" parent="UI/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Draft â€” Area 0 | Perimeter 0 | Corners 0"

[node name="HintLabel" type="Label" parent="UI/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Use the mouse to draft a cage. Left click to add, right click to erase."
autowrap_mode = 1

[node name="Controls" type="HBoxContainer" parent="UI/PanelContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="BuildButton" type="Button" parent="UI/PanelContainer/VBoxContainer/Controls"]
layout_mode = 2
text = "Build"

[node name="ClearButton" type="Button" parent="UI/PanelContainer/VBoxContainer/Controls"]
layout_mode = 2
text = "Clear Draft"

[node name="DemolishButton" type="Button" parent="UI/PanelContainer/VBoxContainer/Controls"]
layout_mode = 2
text = "Demolish Last"

[node name="ResetButton" type="Button" parent="UI/PanelContainer/VBoxContainer/Controls"]
layout_mode = 2
text = "Reset Zoo"
